--- a/TaskManager.React/package.json
+++ b/TaskManager.React/package.json
@@ -12,7 +12,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dnd": "^14.0.4",
@@ -21,7 +23,9 @@
     "react-redux": "^7.2.3",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
